# SCAPO

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_NOTES.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  TEST_RESULTS.md  alembic.ini  docker-compose.yml  intelligent_scraper_summary.json  prometheus.yml  pyproject.toml  requirements.txt  setup_playwright.py  test_system.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release.yml  topics.txt
.github/ISSUE_TEMPLATE/: add_model.yaml  add_source.yaml  bug_report.yaml  feature_request.yaml  share_practice.yaml
.github/scripts/: create_labels.sh
.github/workflows/: ci.yml  deploy.yml  website.yml
docs/: ADD_NEW_SOURCE.md  CONFIGURATION.md  LLM_PROCESSING.md  app.js  index.html  styles.css
examples/: raw_scraped_content.json  test_llm_processing.py
mcp/: .gitignore  README.md  example-usage.md  fuzzyMatcher.js  index.js  package-lock.json  package.json  test.js  usage-guide.md
models/audio/eleven-labs/: cost_optimization.md  metadata.json  parameters.json  pitfalls.md  prompting.md
models/audio/firefliesai/: metadata.json
models/audio/mubert/: metadata.json
models/audio/otterai/: cost_optimization.md  metadata.json  prompting.md
models/audio/stable-audio/: cost_optimization.md  parameters.json
models/audio/whisper/: parameters.json  pitfalls.md  prompting.md
models/code/coderabbit/: metadata.json
models/code/cursor/: cost_optimization.md  metadata.json  parameters.json  pitfalls.md  prompting.md
models/code/flexapp/: pitfalls.md
models/code/github-copilot/: cost_optimization.md  metadata.json  parameters.json  pitfalls.md  prompting.md
models/code/kiln/: cost_optimization.md  metadata.json  pitfalls.md
models/code/kilo-code/: metadata.json  parameters.json  prompting.md
models/code/mindstudio/: metadata.json  pitfalls.md
models/code/openai-codex/: cost_optimization.md  metadata.json  pitfalls.md  prompting.md
models/code/wordware/: metadata.json
models/general/all/: metadata.json  prompting.md
models/general/github-pages/: metadata.json  prompting.md
models/general/leonardo-ai/: cost_optimization.md  metadata.json  parameters.json  pitfalls.md
models/general/llama-3/: metadata.json
models/general/veo3/: metadata.json  pitfalls.md
models/image/alpaca/: cost_optimization.md  metadata.json  prompting.md
models/image/astria/: cost_optimization.md  parameters.json  pitfalls.md
models/image/civitai/: metadata.json
models/image/dalle-2/: metadata.json  pitfalls.md  prompting.md
models/image/dreamstudio/: cost_optimization.md  metadata.json  pitfalls.md
models/image/jasper/: metadata.json  parameters.json  pitfalls.md  prompting.md
models/image/leonardo-ai/: cost_optimization.md  metadata.json  pitfalls.md
scripts/: generate_models_manifest.py  git_update.py  init_pipeline.py  intro.tape  legacy.tape  promo_scapo.tape  run_all_tapes.sh  scrape-batch.tape  scrape-discovery.tape  scrape-targeted.tape  serve_website_local.sh  service-discovery-audio.tape  service-discovery-video.tape  tui.tape  validate_models.py  validate_pipeline.py  validate_sources.py
scripts/tapes/: intro.tape  legacy.tape  scrape-batch.tape  scrape-discovery.tape  scrape-targeted.tape  tui.tape
src/: __init__.py  __main__.py  cli.py  tui.py
src/api/: routes.py  server.py
src/core/: aliases.py  config.py  database.py  logging.py  models.py
src/models/: db_models.py  scraper_models.py
src/scrapers/: __init__.py  base.py  base_enhanced.py  browser_base.py  forum_scraper.py  github_scraper.py  hackernews_scraper.py  intelligent_browser_scraper.py  reddit_scraper.py  run.py  service_discovery.py  source_manager.py  sources.yaml  targeted_search_generator.py
src/services/: adaptive_processor.py  batch_llm_processor.py  cache_service.py  content_processor.py  data_service.py  llm_processor.py  model_discovery.py  model_entry_generator.py  model_service.py  openrouter_context.py  practice_updater.py  scheduler.py  scraper_service.py  service_alias_manager.py  update_manager.py  usage_service.py
src/utils/: metrics.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_models.py  test_scrapers.py
(+303 files in other folders)
