[project]
name = "scapo"
version = "0.1.0"
description = "Stay Calm and Prompt On - Queryable knowledge base for AI model best practices"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Fiefworks", email = "info@czero.cc"},
]
dependencies = [
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "markdownify>=0.13.1",
    "python-dotenv>=1.0.1",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "rich>=13.9.0",
    "textual>=0.52.1",
    "click>=8.1.7",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "playwright>=1.48.0",
    "lxml>=5.3.0",
    "feedparser>=6.0.11",
    "PyYAML>=6.0.2",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.28.0",
    "pre-commit>=3.8.0",
    "black>=24.10.0",
    "isort>=5.13.2",
]

[project.scripts]
scapo = "src.cli:main"

[tool.setuptools]
packages = ["src", "src.core", "src.models", "src.scrapers", "src.services", "src.utils"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = ["E501", "B008", "B904"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.isort]
profile = "black"
line_length = 100